--- a/generic.html
+++ b/generic.html
@@ -32,10 +32,18 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">A Generic Page</h1>
+							<h1 class="major">P1 Zelda</h1>
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<p>Recreation of the Legend of Zelda's first dungeon with a new shotgun mechanic.</p>
+							<p>Controls:</p>
+							<p>Movement: Arrow Keys, WASD</p>
+							<p>Primary Weapon (Sword): X</p>
+							<p>Secondary Weapon: Z</p>
+							<p>Swap Weapons: Space Bar</p>
+							<p>Toggle Cheats: 1</p>
+							<p>Switch to Novel Scene: 4</p>
+							<p>Contributions:</p>
+							<p>I developed the room transitioning system along with the locked doors system. I also worked on movable blocks and implemented the old man room, bow room, and audio effects. Additionally, implemented the Keese enemy, map collisions, cheats feature, and moving collisions.</p>
 						</div>
 					</section>
 
