--- a/generic.html
+++ b/generic.html
@@ -33,7 +33,8 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">P1 Zelda</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<!-- <span class="image fit"><img src="images/pic04.jpg" alt="" /></span> -->
+							<a href="/games/P1-Zelda">P1 Zelda Game Link</a>
 							<p>Recreation of the Legend of Zelda's first dungeon with a new shotgun mechanic.</p>
 							<p>Controls:</p>
 							<p>Movement: Arrow Keys, WASD</p>
