add windows mac build downlaod

--- a/generic.html
+++ b/generic.html
@@ -34,8 +34,12 @@
 						<div class="inner">
 							<h1 class="major">P1 Zelda</h1>
 							<!-- <span class="image fit"><img src="images/pic04.jpg" alt="" /></span> -->
-							<a href="/games/P1-Zelda">P1 Zelda Game Link</a>
+							<!--<a href="/games/P1-Zelda">P1 Zelda Game Link</a>-->
+							<p>Download Game:</p>
+							<a href="/game_files/P1-Zelda/MacExportGold.app" download>Download Mac Build</a>
+							<a href="/game_files/P1-Zelda/WindowsExportGold" download>Download Windows Build</a>
 							<p>Recreation of the Legend of Zelda's first dungeon with a new shotgun mechanic.</p>
+							<p></p>
 							<p>Controls:</p>
 							<p>Movement: Arrow Keys, WASD</p>
 							<p>Primary Weapon (Sword): X</p>
@@ -43,30 +47,33 @@
 							<p>Swap Weapons: Space Bar</p>
 							<p>Toggle Cheats: 1</p>
 							<p>Switch to Novel Scene: 4</p>
+							<p></p>
 							<p>Contributions:</p>
 							<p>I developed the room transitioning system along with the locked doors system. I also worked on movable blocks and implemented the old man room, bow room, and audio effects. Additionally, implemented the Keese enemy, map collisions, cheats feature, and moving collisions.</p>
+							<p>Used Unity and C# to develop the game alongside assets provided from course website and from https://www.spriters-resource.com/</p>
 						</div>
-					</section>
+				</section>
 
-			</div>
+		</div>
 
-		<!-- Footer -->
-			<footer id="footer" class="wrapper alt">
-				<div class="inner">
-					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</footer>
+	<!-- Footer -->
+							<footer id="footer" class="wrapper alt">
+								<div class="inner">
+									<ul class="menu">
+										<li>&copy; Untitled. All rights reserved.</li>
+										<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+									</ul>
+								</div>
+							</footer>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+							<!-- Scripts -->
+							<script src="assets/js/jquery.min.js"></script>
+							<script src="assets/js/jquery.scrollex.min.js"></script>
+							<script src="assets/js/jquery.scrolly.min.js"></script>
+							<script src="assets/js/browser.min.js"></script>
+							<script src="assets/js/breakpoints.min.js"></script>
+							<script src="assets/js/util.js"></script>
+							<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
 </html>
