add windows mac build downlaod

--- a/generic.html
+++ b/generic.html
@@ -36,8 +36,10 @@
 							<!-- <span class="image fit"><img src="images/pic04.jpg" alt="" /></span> -->
 							<!--<a href="/games/P1-Zelda">P1 Zelda Game Link</a>-->
 							<p>Download Game:</p>
-							<a href="/game_files/P1-Zelda/MacExportGold.app" download>Download Mac Build</a>
-							<a href="/game_files/P1-Zelda/WindowsExportGold" download>Download Windows Build</a>
+							<a href="/game_files/P1-Zelda/MacExportGold.app.zip" download>Download Mac Build</a>
+							<p></p>
+							<a href="/game_files/P1-Zelda/WindowsExportGold.zip" download>Download Windows Build</a>
+							<p></p>
 							<p>Recreation of the Legend of Zelda's first dungeon with a new shotgun mechanic.</p>
 							<p></p>
 							<p>Controls:</p>
